<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_columnSpan="1"
    android:layout_height="match_parent">
<TableRow android:layout_width="match_parent">
    <ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
    android:id="@+id/runPicture"/>
</TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:id="@+id/runName"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runDateHolder"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runDate"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runPlaceHolder"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/place"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runPlace"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runPriceHolder"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/price"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runPrice"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runOrganisationHolder"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/organisation"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runOrganisation"/>
</TableRow>
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/runParticipateHolder"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/participate"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/runParticipate"/>
</TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/runWebsiteHolder"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="@string/webpage"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/runWebsite"/>
    </TableRow>
</TableLayout>